--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -18,12 +18,12 @@
 		 			class="timer_done" 
 		 			src="../../image/complete.png"></image>
 		 </view>
-		 <input 
+		 <!-- <input 
 		 	type="text" 
 		 	placeholder-style="text-align:center" 
 		 	class="timer_inputname" 
 		 	bindinput="changeLogName"
-		 	placeholder="给您的任务取个名字吧"/>
+		 	placeholder="给您的任务取个名字吧"/> -->
 	</view>
 	
 	<view class="timer_footer">
