--- a/pages/index5/index.wxml
+++ b/pages/index5/index.wxml
@@ -1,31 +1,73 @@
 <view class="container">
   <view class="container-title">饮食记录 <text class="container-title-right">日期</text></view>
   <view wx:if="{{idx === 0}}">
-    <view wx:if="{{page0Idx === 0}}" class="page0-box">
+    <view  wx:if="{{page0Idx === 0}}" class="page0-box">
       <view wx:for="{{page0List}}" wx:key="index" class="page0-box-item" bindtap="page00tap" data-idx="{{index}}">
         <image class="section_image" src="{{'../../image/page00' + index + '.png'}}"></image>
         <view>{{item.name}}</view>
       </view>
     </view>
-    <view wx:if="{{page0Idx === 1}}" class="page0-box">
-
+    <view  wx:if="{{page0Idx === 1}}" class="page0-box">
       <view bindtap="estimate">我会估算</view>
-      <view wx:for="{{estimateGiude}}" wx:key="index" class="">
-        <image wx:for="{{item}}" wx:key="index" class="estimate-giude-image" src="{{'../../image/page01' + item + '.png'}}"></image>
+      <image class="estimate-giude-image" src="{{'../../image/page010.png'}}"></image>
+    </view>
+    <view  wx:if="{{page0Idx === 2}}" class="page0-box2">
+      <view wx:for="{{page02List}}" wx:key="index" class="page0-box2-item" bindtap="page00tap" data-idx="{{index}}">
+        <image class="section_image" src="{{'../../image/page02' + index + '.png'}}"></image>
+        <view>{{item}}</view>
       </view>
     </view>
   </view>
   <view wx:if="{{idx === 1}}">
-    page1
+    <view class="page1-box">
+      <image class="estimate-giude-image" src="{{'../../image/page100.png'}}"></image>
+    </view>
   </view>
   <view wx:if="{{idx === 2}}">
-    page2
+    <view wx:if="{{page2Idx === -1}}" class="page2-box">
+      <view wx:for="{{page2List}}" wx:key="index" style="background:{{item.color}}" class="page2-box-item" bindtap="page2tap" data-idx="{{index}}">
+        <image class="section_image" src="{{'../../image/page20' + index + '.png'}}"></image>
+        <view class="text">{{item.name}}</view>
+      </view>
+    </view>
+    <view  wx:if="{{page2Idx === 0}}">
+      <image style="height:340px;" src="{{'../../image/page210.png'}}"></image>
+    </view>
+    <view  wx:if="{{page2Idx === 1}}">
+      <image  style="height:500px;" src="{{'../../image/page220.png'}}"></image>
+    </view>
+    <view  wx:if="{{page2Idx === 2}}">
+      <image  style="height:500px;" src="{{'../../image/page230.png'}}"></image>
+    </view>
+    <view  wx:if="{{page2Idx === 3}}">
+      <image  style="height:160px;" src="{{'../../image/page240.png'}}"></image>
+      <i-button i-class="i-page-button" type="ghost" bindtap="page24tap" data-idx="0">我要选择：45.9/月</i-button>
+      <image  style="height:160px;" src="{{'../../image/page241.png'}}"></image>
+      <i-button i-class="i-page-button" type="ghost" bindtap="page24tap" data-idx="1">我要选择：45.9/月</i-button>
+    </view>
+    <view  wx:if="{{page2Idx === 4}}">
+      <image style="height:500px;" src="{{'../../image/page250.png'}}"></image>
+    </view>
   </view>
   <view wx:if="{{idx === 3}}">
-    page3
+    <view wx:if="{{page3Idx === -1}}" class="page3-box">
+      <view wx:for="{{page3List}}" wx:key="index" class="page3-box-item" bindtap="page3tap" data-idx="{{index}}" >
+        <image class="page3-box-image" src="{{'../../image/page30' + index + '.png'}}"></image>
+        <view>{{item}}</view>
+      </view>
+    </view>
+    <view  wx:if="{{page3Idx === 1}}">
+      <image style="height:500px;" src="{{'../../image/page310.png'}}"></image>
+    </view>
+    <view  wx:if="{{page3Idx === 3}}">
+      <image style="height:500px;" src="{{'../../image/page330.png'}}"></image>
+    </view>
+    <view  wx:if="{{page3Idx === 4}}">
+      <image style="height:500px;" src="{{'../../image/page340.png'}}"></image>
+    </view>
   </view>
   <view wx:if="{{idx === 4}}">
-    page4
+     <image style="height:360px;" src="{{'../../image/page400.png'}}"></image>
   </view>
   <view class="container-tabbar">
     <view wx:for="{{tabBar}}" wx:key="index" class="{{idx === index ? 'container-tabbar-item container-tabbar-item-active' : 'container-tabbar-item'}}" bindtap="changePage" data-idx="{{index}}">{{item}}</view>
