--- a/app.wxss
+++ b/app.wxss
@@ -1,58 +1,64 @@
 @import './weui.wxss';
-
 page {
-  height: 100%;
+    height: 100%;
 }
 
 .hide {
-  display: none!important;
+    display: none!important;
 }
 
 .container,
 input,
 button {
-  font: 14px "Helvetica Neue", "Hiragino Sans GB", "Microsoft YaHei", Arial, sans-serif;
+    font: 14px "Helvetica Neue", "Hiragino Sans GB", "Microsoft YaHei", Arial, sans-serif;
 }
 
 .container {
-  position: relative;
-  height: 100%;
-  background-color: #f5f5f5;
+    position: relative;
+    height: 100%;
+    background-color: #f5f5f5;
 }
 
 .container .submit-btn {
-  position: absolute;
-  bottom: 10px;
-  left: 0px;
-  width: 100%;
+    position: absolute;
+    bottom: 10px;
+    left: 0px;
+    width: 100%;
 }
 
 .container .container-title {
-  padding: 10px 0px;
+    padding: 10px 0px;
 }
+
 .container-title .container-title-right {
-  padding-left: 68%;
+    padding-left: 68%;
 }
+
 .panel {
-  background: #fff;
-  border-radius: 3px;
-  padding: 5px 10px;
-}
-.nodata{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
+    background: #fff;
+    border-radius: 3px;
+    padding: 5px 10px;
 }
 
-.nodata_img{
-	display: block;
-	width: 45px;
-	height: 45px;
+.nodata {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
-.nodata_text{
-	color:#dedede;
-	font-size: 12px;
-	padding-left: 10px;
+.nodata_img {
+    display: block;
+    width: 45px;
+    height: 45px;
+}
+
+.nodata_text {
+    color: #dedede;
+    font-size: 12px;
+    padding-left: 10px;
+}
+
+image {
+    width: 100%;
 }
