--- a/pages/index5/index.wxss
+++ b/pages/index5/index.wxss
@@ -22,8 +22,21 @@
   width: 40%;
 }
 
-.estimate-giude-image {
+.page0-box2 .page0-box2-item {
+  text-align: center;
+  display: inline-block;
+  margin: 10px;
+  width: 27%;
+}
+
+.page0-box2 .page0-box2-item image {
+  width: 50px;
   height: 50px;
+}
+
+.estimate-giude-image {
+  width: 100%;
+  height: 500px;
 }
 
 .container-tabbar .container-tabbar-item:nth-child(n+2) {
@@ -44,4 +57,34 @@
 .container .section_image {
   width: 100px;
   height: 100px;
+}
+
+.page2-box .page2-box-item {
+  margin: 5px;
+  border: 1px solid #000;
+  border-radius: 8px;
+  padding: 10px;
+  position: relative;
+}
+
+.page2-box .page2-box-item image {
+  width: 80px;
+  height: 80px;
+}
+.page2-box .page2-box-item .text {
+  font-size: 15px;
+  position: absolute;
+  left: 120px;
+  top: 40px
+}
+
+.page3-box .page3-box-item {
+    display: flex;
+    margin: 5px 0;
+}
+
+.page3-box .page3-box-item image {
+  width: 20px;
+  height: 20px;
+  padding-right: 10px;
 }
