--- a/app.wxss
+++ b/app.wxss
@@ -18,11 +18,19 @@ button {
     padding: 10px;
     min-height: calc(100vh - 20px);
     background-color: #fff;
-}
-
-.container .container-title {
+  }
+  
+  .container .container-title {
     padding-bottom: 10px;
-}
+    overflow: hidden;
+  }
+
+  .container-title .container-title-left {
+    float: left;
+  }
+  .container-title .container-title-right {
+    float: right;
+  }
 
 .container .submit-btn {
     position: absolute;
@@ -31,9 +39,6 @@ button {
     width: 100%;
 }
 
-.container-title .container-title-right {
-    padding-left: 68%;
-}
 
 .active-text {
   background-color: rgb(242, 136, 136);
