--- a/pages/index3/index.wxml
+++ b/pages/index3/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <view class="container-title">请选择您的疾病类型：</view>
+  <view class="container-title">请完善您的信息：</view>
   <image class="section_image" src="../../image/index3-1.png"></image>
   <i-input value="{{ value1 }}" bindchange="handleListChange" title="您最近一次的空腹血糖值" placeholder="请输入" />
   <i-button class="submit-btn" bindtap="handleClick" type="success">我填好啦</i-button>
